--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,30 @@
 <hello name="{{ name }}"></hello>
 <div class="card">
-  <div class="form-group">
-    <label for="texto">Caja de Texto</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
+  <form name="ejercicio1">
+    <div class="form-group">
+      <label for="texto">Caja de Texto </label>
+      <input type="text"   ng-model="texto" class="form-control"  required  />
+    </div>
+
+
+    <div class="form-group">
+      <label for="texto">Caja numerica </label>
+      <input type="number" ng-model="numero" class="form-control" required />
+    </div>
+    <div class="form-group">
+      <label for="texto">Selector </label>
+      <select type="text" ng-model="selector" class="form-control" required >
+<option>Valor 1</option>
+<option>Valor 2</option>
+</select>
+    </div>
+    <div class="form-group">
+      <label for="texto">Comentario </label>
+      <textarea type="text" ng-model="comentarios" class="form-control"  cols="30" >
+</textarea>
+    </div>
+    <div class="form-group">
+      <input type="submit" class="btn btn-success"  value="Guardar" />
+    </div>
+  </form>
 </div>
